<resources>
    <string name="pvp_net_key">API KEY</string>
    <string name="app_name">LolGoldEfficiency</string>

    <string name="preference_file_key">net.iturrioz.lolgoldefficiency.pref</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_get_versions">Update version list</string>

    <string name="nav_stats">Stats</string>
    <string name="nav_group_runes">Runes</string>
    <string name="nav_marks">Marks</string>
    <string name="nav_seals">Seals</string>
    <string name="nav_glyphs">Glyphs</string>
    <string name="nav_quintessences">Quints</string>
    <string name="nav_group_settings">Settings</string>
    <string name="nav_versions">Versions</string>
    <string name="nav_header_version">Select version</string>

    <string name="error_no_stats">No stats loaded</string>
    <string name="error_no_runes">No runes loaded</string>
</resources>
